test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeDestroy.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__destroy' has incorrect return type
	int __destroy() noexcept {
		return 0;
	}
}

// CHECK: 1 error generated.
